--- a/shopping_mall/src/main/resources/templates/fragments/header.html
+++ b/shopping_mall/src/main/resources/templates/fragments/header.html
@@ -9,11 +9,6 @@
 </head>
 
 <div th:fragment="header">
-<!--    <div class="btn-group">-->
-<!--        <a href="/item" class="btn btn-primary active">Active link</a>-->
-<!--        <a href="/item" class="btn btn-primary">Link</a>-->
-<!--        <a href="/item" class="btn btn-primary">Link</a>-->
-<!--    </div>-->
     <header class="p-3 text-bg-dark">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -23,8 +18,8 @@
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="/item" class="nav-link px-2 text-secondary">Home</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                    <li><a href="/member/new" class="nav-link px-2 text-white">Features</a></li>
+                    <li><a href="/member/login" class="nav-link px-2 text-white">Pricing</a></li>
                     <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
                     <li><a href="#" class="nav-link px-2 text-white">About</a></li>
                 </ul>
