--- a/shopping_mall/src/main/resources/templates/member/joinForm.html
+++ b/shopping_mall/src/main/resources/templates/member/joinForm.html
@@ -1,53 +1,66 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<!--<head th:replace="fragments/header :: header">-->
-<!--    <meta charset="utf-8">-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">-->
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>-->
-<!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
-<!--</head>-->
-<body>
-<div class="content">
-    <div class="container container-mt">
-        <form action="/member/new" role="form" method="post"  th:object="${joinForm}">
-            <div class="form-group">
-                <label th:for="name">이름</label>
-                <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">
-            </div>
-            <div class="form-group">
-                <label th:for="email">이메일주소</label>
-                <input type="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력해주세요">
-            </div>
-            <div class="form-group">
-                <label th:for="password">비밀번호</label>
-                <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력해주세요">
-<!--                <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>-->
-            </div>
-            <div class="form-group">
-                <label th:for="phone">전화번호</label>
-                <input type="text" th:field="*{phone}" class="form-control" placeholder="전화번호를 입력해주세요">
-                <!--                <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError">Incorrect data</p>-->
-            </div>
-            <div class="form-group">
-                <label th:for="street">거리</label>
-                <input type="text" th:field="*{street}" class="form-control" placeholder="주소를 입력해주세요">
-            </div>
-            <div class="form-group">
-                <label th:for="city">도시</label>
-                <input type="text" th:field="*{city}" class="form-control" placeholder="주소를 입력해주세요">
-            </div>
-            <div class="form-group">
-                <label th:for="zipcode">우편번호</label>
-                <input type="text" th:field="*{zipcode}" class="form-control" placeholder="우편번호를 입력해주세요">
-            </div>
-            <div style="text-align: center">
-                <button type="submit" class="btn btn-secondary" style="margin-top: 20px;">Submit</button>
-            </div>
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-        </form>
-    </div>
-    <div th:replace="fragments/footer :: footer"></div>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/mainLayout}">
+
+<th:block layout:fragment="css">
+    <style>
+        .fieldError {
+            color: #bd2130;
+        }
+    </style>
+</th:block>
+
+
+<th:block layout:fragment="script">
+    <script th:inline="javascript">
+        $(document).ready(function(){
+            var errorMessage = [[${errorMessage}]];
+            if(errorMessage != null){
+                alert(errorMessage);
+            }
+        });
+    </script>
+</th:block>
+
+<div layout:fragment="content">
+    <form action="/member/new" role="form" method="post"  th:object="${joinForm}">
+        <div class="form-group">
+            <label th:for="name">이름</label>
+            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">
+            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <label th:for="email">이메일주소</label>
+            <input type="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력해주세요">
+            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <label th:for="password">비밀번호</label>
+            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력해주세요">
+            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <label th:for="phone">전화번호</label>
+            <input type="text" th:field="*{phone}" class="form-control" placeholder="전화번호를 입력해주세요">
+            <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <label th:for="street">거리</label>
+            <input type="text" th:field="*{street}" class="form-control" placeholder="주소를 입력해주세요">
+        </div>
+        <div class="form-group">
+            <label th:for="city">도시</label>
+            <input type="text" th:field="*{city}" class="form-control" placeholder="주소를 입력해주세요">
+        </div>
+        <div class="form-group">
+            <label th:for="zipcode">우편번호</label>
+            <input type="text" th:field="*{zipcode}" class="form-control" placeholder="우편번호를 입력해주세요">
+        </div>
+        <div style="text-align: center">
+            <button type="submit" class="btn btn-secondary" style="margin-top: 20px;">Submit</button>
+        </div>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+    </form>
 </div>
-</body>
 </html>
