--- a/shopping_mall/src/main/resources/templates/member/joinForm.html
+++ b/shopping_mall/src/main/resources/templates/member/joinForm.html
@@ -24,7 +24,7 @@
 </th:block>
 
 <div layout:fragment="content">
-    <form action="/member/new" role="form" method="post"  th:object="${joinForm}">
+    <form action="/member/new" role="form" method="post"  th:object="${joinFormDto}">
         <div class="form-group">
             <label th:for="name">이름</label>
             <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">
@@ -48,17 +48,20 @@
         <div class="form-group">
             <label th:for="street">거리</label>
             <input type="text" th:field="*{street}" class="form-control" placeholder="주소를 입력해주세요">
+            <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
             <label th:for="city">도시</label>
             <input type="text" th:field="*{city}" class="form-control" placeholder="주소를 입력해주세요">
+            <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
             <label th:for="zipcode">우편번호</label>
             <input type="text" th:field="*{zipcode}" class="form-control" placeholder="우편번호를 입력해주세요">
+            <p th:if="${#fields.hasErrors('zipcode')}" th:errors="*{zipcode}" class="fieldError">Incorrect data</p>
         </div>
         <div style="text-align: center">
-            <button type="submit" class="btn btn-secondary" style="margin-top: 20px;">Submit</button>
+            <button type="submit" class="btn btn-primary" style="">Submit</button>
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     </form>
