--- a/shopping_mall/src/main/resources/templates/item/itemDetail.html
+++ b/shopping_mall/src/main/resources/templates/item/itemDetail.html
@@ -22,7 +22,7 @@
     function calculateTotalPrice(){
       var count = $("#count").val();
       var price = $("#price").val();
-      var totalPrice = price*count;
+      var totalPrice = price * count;
       $("#totalPrice").html(totalPrice + '원');
     }
 
@@ -44,7 +44,6 @@
         contentType : "application/json",
         data : param,
         beforeSend : function(xhr){
-          /* 데이터를 전송하기 전에 헤더에 csrf 값을 설정 */
           xhr.setRequestHeader(header, token);
         },
         dataType : "json",
@@ -64,7 +63,7 @@
       });
     }
 
-    function addCart(){
+    function addToCart(){
       var token = $("meta[name='_csrf']").attr("content");
       var header = $("meta[name='_csrf_header']").attr("content");
 
@@ -81,8 +80,7 @@
         type     : "POST",
         contentType : "application/json",
         data     : param,
-        beforeSend : function(xhr){
-          /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+        beforeSend : function(xhr) {
           xhr.setRequestHeader(header, token);
         },
         dataType : "json",
@@ -92,7 +90,6 @@
           location.href='/';
         },
         error : function(jqXHR, status, error){
-
           if(jqXHR.status === '401'){
             alert('로그인 후 이용해주세요');
             location.href='/member/login';
@@ -134,13 +131,13 @@
   </style>
 </th:block>
 
-<div layout:fragment="content" style="margin-left:25%;margin-right:25%">
+<div layout:fragment="content" style="margin-left:25%; margin-right:25%">
 
   <input type="hidden" id="itemId" th:value="${item.id}">
 
   <div class="d-flex">
     <div class="repImgDiv">
-      <img th:src="${item.itemImgDtoList[0].imgUrl}" class = "rounded repImg" th:alt="${item.name}">
+      <img th:src="${item.itemImgDtoList[0].imgUrl}" class = "rounded repImg" th:alt="${item.itemName}">
     </div>
     <div class="wd50">
       <span th:if="${item.itemSellStatus == T(com.example.shopping_mall.constant.ItemSellStatus).SELL}" class="badge badge-primary mgb-15">
@@ -149,7 +146,7 @@
       <span th:unless="${item.itemSellStatus == T(com.example.shopping_mall.constant.ItemSellStatus).SELL}" class="badge btn-danger mgb-15" >
         품절
       </span>
-      <div class="h4" th:text="${item.name}"></div>
+      <div class="h4" th:text="${item.itemName}"></div>
       <hr class="my-4">
 
       <div class="text-right">
@@ -171,8 +168,7 @@
         <h3 name="totalPrice" id="totalPrice" class="font-weight-bold"></h3>
       </div>
       <div th:if="${item.itemSellStatus == T(com.example.shopping_mall.constant.ItemSellStatus).SELL}" class="text-right">
-        <button type="button" class="btn btn-light border border-primary btn-lg"
-                onclick="addCart()">장바구니 담기</button>
+        <button type="button" class="btn btn-light border border-primary btn-lg" onclick="addToCart()">장바구니 담기</button>
         <button type="button" class="btn btn-primary btn-lg" onclick="order()">주문하기</button>
       </div>
       <div th:unless="${item.itemSellStatus == T(com.example.shopping_mall.constant.ItemSellStatus).SELL}" class="text-right">
@@ -185,7 +181,7 @@
     <div class="container">
       <h4 class="display-5">상품 상세 설명</h4>
       <hr class="my-4">
-      <p class="lead" th:text="${item.detail}"></p>
+      <p class="lead" th:text="${item.itemDetail}"></p>
     </div>
   </div>
   <div th:each="itemImg : ${item.itemImgDtoList}" class="text-center">
