--- a/shopping_mall/src/main/resources/templates/item/itemForm.html
+++ b/shopping_mall/src/main/resources/templates/item/itemForm.html
@@ -65,9 +65,9 @@
       <div class="input-group-prepend">
         <span class="input-group-text">상품명</span>
       </div>
-      <input type="text" th:field="*{name}" class="form-control" placeholder="상품명을 입력해주세요">
+      <input type="text" th:field="*{itemName}" class="form-control" placeholder="상품명을 입력해주세요">
     </div>
-    <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
+    <p th:if="${#fields.hasErrors('itemName')}" th:errors="*{itemName}" class="fieldError">Incorrect data</p>
 
     <div class="input-group">
       <div class="input-group-prepend">
@@ -89,9 +89,9 @@
       <div class="input-group-prepend">
         <span class="input-group-text">상품 상세 내용</span>
       </div>
-      <textarea class="form-control" aria-label="With textarea" th:field="*{detail}"></textarea>
+      <textarea class="form-control" aria-label="With textarea" th:field="*{itemDetail}"></textarea>
     </div>
-    <p th:if="${#fields.hasErrors('detail')}" th:errors="*{detail}" class="fieldError">Incorrect data</p>
+    <p th:if="${#fields.hasErrors('itemDetail')}" th:errors="*{itemDetail}" class="fieldError">Incorrect data</p>
 
     <div th:if="${#lists.isEmpty(itemFormDto.itemImgDtoList)}">
       <div class="form-group" th:each="num: ${#numbers.sequence(1,5)}">
