--- a/shopping_mall/src/main/resources/templates/item/itemMng.html
+++ b/shopping_mall/src/main/resources/templates/item/itemMng.html
@@ -53,7 +53,7 @@
             <tr th:each="item, status: ${items.getContent()}">
                 <td th:text="${item.id}"></td>
                 <td>
-                    <a th:href="'/admin/item/'+ ${item.id}" th:text="${item.name}"></a>
+                    <a th:href="'/admin/item/'+ ${item.id}" th:text="${item.itemName}"></a>
                 </td>
                 <td th:text="${item.itemSellStatus == T(com.example.shopping_mall.constant.ItemSellStatus).SELL} ? '판매중' : '품절'"></td>
                 <td th:text="${item.createdDate}"></td>
