--- a/shopping_mall/src/main/resources/templates/member/joinForm.html
+++ b/shopping_mall/src/main/resources/templates/member/joinForm.html
@@ -21,6 +21,41 @@
             }
         });
     </script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script>
+        function execPostCode() {
+            new daum.Postcode({
+                oncomplete: function(data) {
+                    // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                    // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                    // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                    var addr = data.roadAddress; // 주소 변수
+                    var extraAddr = ''; // 참고항목 변수
+
+                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+                        extraAddr += data.bname;
+                    }
+                    // 건물명이 있고, 공동주택일 경우 추가한다.
+                    if(data.buildingName !== '' && data.apartment === 'Y'){
+                        extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                    }
+                    // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                    if(extraAddr !== ''){
+                        extraAddr = ' (' + extraAddr + ')';
+                    }
+
+                    // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                    document.getElementById('zipcode').value = data.zonecode;
+                    document.getElementById("city").value = addr;
+                    // 커서를 상세주소 필드로 이동한다.
+                    document.getElementById("street").focus();
+                }
+            }).open();
+        }
+    </script>
 </th:block>
 
 <div layout:fragment="content">
@@ -46,21 +81,20 @@
             <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
-            <label th:for="street">주소</label>
-            <input type="text" th:field="*{street}" class="form-control" placeholder="주소를 입력해주세요">
-            <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}" class="fieldError">Incorrect data</p>
+            <label th:for="zipcode">주소</label>
         </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label th:for="city">도시</label>
-                <input type="text" th:field="*{city}" class="form-control" placeholder="도시를 입력해주세요">
-                <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="fieldError">Incorrect data</p>
-            </div>
-            <div class="form-group col-md-6">
-                <label th:for="zipcode">우편번호</label>
-                <input type="text" th:field="*{zipcode}" class="form-control" placeholder="우편번호를 입력해주세요">
-                <p th:if="${#fields.hasErrors('zipcode')}" th:errors="*{zipcode}" class="fieldError">Incorrect data</p>
-            </div>
+        <div class="form-group">
+            <input type="text" th:field="*{zipcode}" style="width: 40%; display: inline;" class="form-control" placeholder="우편번호" readonly="readonly">
+            <button type="button" class="btn btn-light" onclick="execPostCode()">우편번호 찾기</button>
+            <p th:if="${#fields.hasErrors('zipcode')}" th:errors="*{zipcode}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{city}" class="form-control" placeholder="도로명 주소" readonly="readonly">
+            <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{street}" class="form-control" placeholder="상세 주소">
+            <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}" class="fieldError">Incorrect data</p>
         </div>
         <div style="text-align: center">
             <button type="submit" class="btn btn-primary" style="">Submit</button>
