--- a/shopping_mall/src/main/resources/templates/member/joinForm.html
+++ b/shopping_mall/src/main/resources/templates/member/joinForm.html
@@ -11,7 +11,6 @@
     </style>
 </th:block>
 
-
 <th:block layout:fragment="script">
     <script th:inline="javascript">
         $(document).ready(function(){
@@ -70,9 +69,13 @@
             <input type="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력해주세요">
             <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
         </div>
-        <div class="form-group">
+        <div class="form-group" th:if="${#strings.isEmpty(joinFormDto.email)}">
             <label th:for="password">비밀번호</label>
             <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력해주세요">
+            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group" th:unless="${#strings.isEmpty(joinFormDto.email)}">
+            <input type="hidden" th:value="${joinFormDto.password}" th:field="*{password}">
             <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
@@ -96,8 +99,11 @@
             <input type="text" th:field="*{street}" class="form-control" placeholder="상세 주소">
             <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}" class="fieldError">Incorrect data</p>
         </div>
-        <div style="text-align: center">
-            <button type="submit" class="btn btn-primary" style="">Submit</button>
+        <div th:if="${#strings.isEmpty(joinFormDto.email)}" style="text-align: center">
+            <button th:formaction="@{/member/new}" type="submit" class="btn btn-primary">저장</button>
+        </div>
+        <div th:unless="${#strings.isEmpty(joinFormDto.email)}" style="text-align: center">
+            <button th:formaction="@{'/member/update/' + ${joinFormDto.id}}" type="submit" class="btn btn-primary">수정</button>
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     </form>
