--- a/shopping_mall/src/main/resources/templates/fragments/header.html
+++ b/shopping_mall/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="/">Shop</a>
+        <a class="navbar-brand" href="/">Home</a>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -21,7 +21,7 @@
 <!--                </li>-->
                 <li class="nav-item dropdown" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
                     <a class="nav-link dropdown-toggle" href="/admin/items" role="button" data-toggle="dropdown" aria-expanded="false">
-                        상품 관리
+                        상품관리
                     </a>
                     <div class="dropdown-menu">
                         <a class="nav-link" href="/admin/item/new">상품 등록</a>
@@ -29,7 +29,7 @@
                     </div>
                 </li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-                    <a class="nav-link" href="/member/list">회원 목록</a>
+                    <a class="nav-link" href="/member/list">회원목록</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" href="/cart">장바구니</a>
