--- a/shopping_mall/src/main/resources/templates/item/itemForm.html
+++ b/shopping_mall/src/main/resources/templates/item/itemForm.html
@@ -42,18 +42,17 @@
     .fieldError {
       color: #bd2130;
     }
+    #item_form{
+      width: 50%;
+      margin: 0 auto;
+    }
   </style>
 </th:block>
 
 <div layout:fragment="content">
-  <form role="form" method="post" enctype="multipart/form-data" action="/admin/item/new" th:object="${itemFormDto}">
-
-    <p class="h2">
-      상품 등록
-    </p>
-
+  <form role="form" method="post" enctype="multipart/form-data" action="/admin/item/new" th:object="${itemFormDto}" id="item_form">
+    <p class="h2">상품 등록</p>
     <input type="hidden" th:field="*{id}">
-
     <div class="form-group">
       <select th:field="*{itemSellStatus}" class="custom-select">
         <option value="SELL">판매중</option>
@@ -108,7 +107,7 @@
           <input type="file" class="custom-file-input" name="itemImgFile">
           <input type="hidden" name="itemImgIds" th:value="${itemImgDto.id}">
           <label class="custom-file-label" th:text="${not #strings.isEmpty(itemImgDto.oriImgName)}
-         ? ${itemImgDto.oriImgName} : '상품이미지' + ${status.index + 1}"></label>
+         ? ${itemImgDto.oriImgName} : 'Image' + ${status.index + 1}"></label>
         </div>
       </div>
     </div>
