--- a/shopping_mall/src/main/resources/templates/member/loginForm.html
+++ b/shopping_mall/src/main/resources/templates/member/loginForm.html
@@ -8,11 +8,15 @@
         .error {
             color: #bd2130;
         }
+        #login_form {
+            width: 50%;
+            margin: 0 auto;
+        }
     </style>
 </th:block>
 
 <div layout:fragment="content">
-    <form role="form" method="post" action="/member/login">
+    <form role="form" method="post" action="/member/login" id="login_form">
         <div class="form-group">
             <label th:for="email">이메일주소</label>
             <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">
