--- a/shopping_mall/src/main/resources/templates/member/memberList.html
+++ b/shopping_mall/src/main/resources/templates/member/memberList.html
@@ -24,7 +24,8 @@
         <td th:text="${member.email}"></td>
         <td th:text="${member.phone}"></td>
         <td th:text="${member.street} + ', ' + ${member.city} + ', ' + ${member.zipcode}"></td>
-        <td th:text="${member.createdDate}"></td>
+<!--        <td th:text="${member.createdDate}"></td>-->
+        <td th:text="${#temporals.format(member.createdDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
         <td th:text="${orderCounts.get(member.id)}"></td>
       </tr>
     </tbody>
