--- a/shopping_mall/src/main/resources/templates/member/joinForm.html
+++ b/shopping_mall/src/main/resources/templates/member/joinForm.html
@@ -71,10 +71,16 @@
                 }
             });
             $(".emailAuthBtn").click(function () {
+                var mailformat = /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/;
                 var email = $('#email').val();
 
                 if (email == '') {
                     alert("이메일을 입력해주세요.");
+                    return false;
+                }
+
+                if(!email.match(mailformat)) {
+                    alert("올바른 이메일 형식이 아닙니다.")
                     return false;
                 }
 
@@ -86,9 +92,8 @@
                         alert("인증번호가 발송되었습니다.");
                         email_auth_cd = data;
                         $("#emailAuthKey").attr("disabled",false);
-                        $("#emailCheckBtn").css("display","inline-block");
-                        $(".successEmailChk").text("인증번호를 입력한 뒤 이메일 인증을 눌러주십시오.");
-                        $(".successEmailChk").css("color","green");
+                        // $(".successEmailChk").text("인증번호를 입력한 뒤 이메일 인증을 눌러주십시오.");
+                        // $(".successEmailChk").css("color","green");
                     },
                     error: function (data) {
                         alert("메일 발송에 실패했습니다.");
@@ -98,13 +103,15 @@
             });
             $("#emailCheckBtn").click(function () {
                 if($("#emailAuthKey").val() == email_auth_cd) {
-                    $(".successEmailChk").text("인증번호가 일치합니다.");
-                    $(".successEmailChk").css("color", "green");
+                    alert("이메일 인증이 완료되었습니다.");
+                    // $(".successEmailChk").text("인증번호가 일치합니다.");
+                    // $(".successEmailChk").css("color", "green");
                     $("#emailDoubleChk").val("true");
                     $("#emailAuthKey").attr("disabled",true);
                 }else{
-                    $(".successEmailChk").text("인증번호가 일치하지 않습니다. 확인해주시기 바랍니다.");
-                    $(".successEmailChk").css("color", "red");
+                    alert("인증번호가 일치하지 않습니다.");
+                    // $(".successEmailChk").text("인증번호가 일치하지 않습니다. 확인해주시기 바랍니다.");
+                    // $(".successEmailChk").css("color", "red");
                     $("#emailDoubleChk").val("false");
                     $("#emailAuthKey").attr("autofocus",true);
                 }
@@ -123,19 +130,28 @@
             <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
-            <input id="email" type="email" th:field="*{email}" class="form-control email" style="width: 50%; display: inline;" placeholder="이메일을 입력해주세요">
-            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
-            <button type="button" id="emailAuthBtn" class="emailAuthBtn">인증번호 받기</button>
+            <label th:for="email">이메일</label>
         </div>
-        <div class="form-group">
-            <input type="text" placeholder="인증번호 입력" class="form-control" id="emailAuthKey" style="width: 50%; display: inline;">
-            <button type="button" id="emailCheckBtn" class="emailCheckBtn">이메일 인증</button>
-            <span class="point successEmailChk">이메일 입력후 인증번호 받기를 눌러주세요.</span>
-            <input type="hidden" id="emailDoubleChk"/>
+        <div class="form-row">
+            <div class="col-8">
+                <input id="email" type="email" th:field="*{email}" class="form-control email" placeholder="이메일을 입력해주세요">
+                <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="col" th:if="${#strings.isEmpty(joinFormDto.id)}">
+                <button type="button" id="emailAuthBtn" class="emailAuthBtn btn btn-light">인증번호 받기</button>
+            </div>
+        </div>
+        <div class="form-row" th:if="${#strings.isEmpty(joinFormDto.id)}">
+            <div class="col-8">
+                <input type="text" placeholder="인증번호 입력" class="form-control" id="emailAuthKey">
+            </div>
+            <div class="col">
+                <button type="button" id="emailCheckBtn" class="emailCheckBtn btn btn-light">인증하기</button>
+                <input type="hidden" id="emailDoubleChk"/>
+            </div>
         </div>
 
-<!--        <div class="form-group" th:if="${#strings.isEmpty(joinFormDto.email)}">-->
-        <div class="form-group">
+        <div class="form-group" style="margin-top: 20px">
             <label th:for="password">비밀번호</label>
             <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력해주세요">
             <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
@@ -165,10 +181,10 @@
             <input type="text" th:field="*{street}" class="form-control" placeholder="상세 주소">
             <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}" class="fieldError">Incorrect data</p>
         </div>
-        <div th:if="${#strings.isEmpty(joinFormDto.email)}" style="text-align: center">
-            <button id="join" th:formaction="@{/member/new}" type="submit" class="btn btn-primary">저장</button>
+        <div th:if="${#strings.isEmpty(joinFormDto.id)}" style="text-align: center">
+            <button id="join" th:formaction="@{/member/new}" type="submit" class="btn btn-primary">가입하기</button>
         </div>
-        <div th:unless="${#strings.isEmpty(joinFormDto.email)}" style="text-align: center">
+        <div th:unless="${#strings.isEmpty(joinFormDto.id)}" style="text-align: center">
             <button th:formaction="@{'/member/update/' + ${joinFormDto.id}}" type="submit" class="btn btn-primary">수정</button>
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
